# work-pic

./: CMakeLists.txt  main.cpp  showpic.cpp  showpic.h
